# HMI-Glove

./: .gitignore  CMakeLists.txt  HMI-Glove.cpp  LICENSE
include/: FreeRTOSConfig.h  bleService.hpp  btstack_config.h  dataTypes.hpp  filters.hpp  icm20948.hpp  kinematics.hpp  le_peripheral.gatt  le_peripheral.h  lwipopts.h  math.hpp  mpu6050.hpp  mpu9250.hpp  pca9548a.hpp
math/: CMakeLists.txt  filters.cpp  matrices.cpp  quaternions.cpp  vectors.cpp
math/include/: filters.hpp  math.hpp  matrices.hpp  quaternions.hpp  types.hpp  vectors.hpp
rtos/: CMakeLists.txt
source/: HMI-Glove.cpp  bleService.cpp  dataTypes.cpp  filters.cpp  icm20948.cpp  kinematics.cpp  math.cpp  mpu6050.cpp  mpu9250.cpp  pca9548a.cpp
